test preset buttons

--- a/pedalboard.html
+++ b/pedalboard.html
@@ -26,6 +26,22 @@
       <div id="pedalboard-controls" style="display: none; align-items: center; gap: 8px;">
         <select id="pedalboardSelect"></select>
         <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">Edit</button>
+        <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">
+          <svg width="20" height="20" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
+            <path
+              d="M4 8 H28
+                M4 16 H28
+                M4 24 H28
+                M10 8 m-2 0 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0
+                M22 16 m-2 0 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0
+                M16 24 m-2 0 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"/>
+          </svg>
+          Go to presets</button>
       </div>
 
       <br><br><br><br>
