test button preset

--- a/pedalboard.html
+++ b/pedalboard.html
@@ -26,23 +26,34 @@
       <div id="pedalboard-controls" style="display: none; align-items: center; gap: 8px;">
         <select id="pedalboardSelect"></select>
         <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">Edit</button>
-        <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">
-          <svg width="20" height="20" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
+
+
+        <button
+          id="goToPresetBtn"
+          class="bx--btn bx--btn--tertiary"
+          type="button"
+          aria-label="Save pedalboard"
+          style="display: flex; align-items: center; gap: 0.5rem;">
+          <svg
+            focusable="false"
+            preserveAspectRatio="xMidYMid meet"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            width="16"
+            height="16"
+            viewBox="0 0 32 32"
+            aria-hidden="true"
+            class="bx--btn__icon">
             <path
-              d="M4 8 H28
-                M4 16 H28
-                M4 24 H28
-                M10 8 m-2 0 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0
-                M22 16 m-2 0 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0
-                M16 24 m-2 0 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0"
+              d="M4 8 H28 M4 16 H28 M4 24 H28 M10 8 m-2 0 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0 M22 16 m-2 0 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0 M16 24 m-2 0 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"/>
           </svg>
-          Go to presets</button>
-      </div>
+          Go to Presets
+        </button>
 
       <br><br><br><br>
 
