--- a/pedalboard.html
+++ b/pedalboard.html
@@ -28,11 +28,11 @@
         <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">Edit</button>
 
 
-        <button
+        <!-- <button
           id="goToPresetBtn"
           class="bx--btn bx--btn--tertiary"
           type="button"
-          aria-label="Save pedalboard"
+          aria-label=""
           style="display: flex; align-items: center; gap: 0.5rem;">
           <svg
             focusable="false"
@@ -53,7 +53,7 @@
               stroke-linejoin="round"/>
           </svg>
           Go to Presets
-        </button>
+        </button> -->
 
       <br><br><br><br>
 
