--- a/pedalboard.html
+++ b/pedalboard.html
@@ -26,7 +26,7 @@
       <div id="pedalboard-controls" style="display: none; align-items: center; gap: 8px;">
         <select id="pedalboardSelect"></select>
         <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">Edit</button>
-
+      </div>
 
         <!-- <button
           id="goToPresetBtn"
