--- a/create.html
+++ b/create.html
@@ -15,21 +15,14 @@
 
 <body>
 
-    <center>
-        <h2>Gear Preview</h2><br><br>
-        <div id="pedal-box"></div>
-    </center>
-
-    <br><br>
-
     <div id="builder">
 
         <div id="editor">
             <h2>Gear Quick Creation</h2><br><br>
             <div class="pedal-info">
-                <label>ID <input type="text" id="pedal-id" placeholder="Insert unique gear ID..."></label>
-                <label>Name <input type="text" id="pedal-name" placeholder="Insert gear name..."></label>
-                <label>Logo style <input type="text" id="pedal-logo" placeholder="Set valid CSS..."></label>
+                <label>ID <input type="text" class="create-gear-input" id="pedal-id" placeholder="Insert unique gear ID..."></label>
+                <label>Name <input type="text" class="create-gear-input" id="pedal-name" placeholder="Insert gear name..."></label>
+                <label>Logo style <input type="text" class="create-gear-input" id="pedal-logo" placeholder="Set valid CSS..."></label>
             </div>
             <br>
             <label>Type <select id="pedal-type">
@@ -65,13 +58,15 @@
 
 
         <div id="preview">
-            <h2>Generated JSON</h2><br><br>
-            <textarea id="json-output" style="width:100%;height:300px;font-family:monospace;"></textarea>
-            <div id="json-error" style="color:red; font-weight:bold; margin-top:5px;"></div>
+
+        <h2>Gear Preview</h2><br><br>
+        <div id="pedal-box"></div>
         </div>
     </div>
 
-
+            <h2>Generated JSON</h2><br><br>
+            <textarea id="json-output" style="width:100%;height:300px;font-family:monospace;"></textarea>
+            <div id="json-error" style="color:red; font-weight:bold; margin-top:5px;"></div>
 
 
 
@@ -88,7 +83,6 @@
             <option value="xlargeknob">XLarge</option>
             </select>
         </label>
-        <!-- <label>Position <select class="ctrl-position"><option>highest</option><option>higher</option><option>high</option><option selected></option><option>low</option><option>lower</option><option>lowest</option><option>align-top</option><option>under-top</option></select></label> -->
         <label>Position 
             <select class="ctrl-position">
             <option></option>
@@ -106,7 +100,7 @@
             <option value="margin-right">Margin Right</option>
             </select>
         </label>
-        <input type="number" class="ctrl-position-value" placeholder="px" min="0" style="display:none; width:80px;">
+        <input type="number" class="ctrl-position-value" placeholder="px" min="0" style="display:none; width:50px;">
         <label>Knob <input type="color" class="ctrl-knob-color" value=""></label>
         <label>Border <input type="color" class="ctrl-knob-border" value=""></label>
         <label>Indicator <input type="color" class="ctrl-knob-indicator" value=""></label>
@@ -126,8 +120,25 @@
         <div class="control" data-type="led">
   <h4>LED</h4>
   <label>Label <input type="text" class="ctrl-label"></label>
-  <label>Position <select class="ctrl-position"><option>highest</option><option>higher</option><option>high</option><option selected></option><option>low</option><option>lower</option><option>lowest</option><option>xlow</option><option>right</option><option>under-top</option><option>align-top</option><option>align-top-clear</option><option>align-top-clearer</option></select></label>
-  <label>Color OFF <input type="color" class="ctrl-color0" value="#000000"></label>
+  <label>Show Label <input type="checkbox" class="ctrl-showlabel"></label>
+        <label>Position 
+            <select class="ctrl-position">
+            <option></option>
+            <option>highest</option>
+            <option>higher</option>
+            <option>high</option>
+            <option>low</option>
+            <option>lower</option>
+            <option>lowest</option>
+            <option>xlow</option>
+            <option>right</option>
+            <option>under-top</option>
+            <option>align-top</option>
+            <option value="margin-left">Margin Left</option>
+            <option value="margin-right">Margin Right</option>
+            </select>
+        </label>
+        <input type="number" class="ctrl-position-value" placeholder="px" min="0" style="display:none; width:50px;">  <label>Color OFF <input type="color" class="ctrl-color0" value="#000000"></label>
   <label>Color ON <input type="color" class="ctrl-color1" value="#f70000"></label>
   <label>Value <select class="ctrl-value"><option value="0">Off</option><option value="1">On</option></select></label>
   <br>
@@ -160,8 +171,15 @@
         <div class="control" data-type="lcd">
   <h4>LCD</h4>
   <label>Label <input type="text" class="ctrl-label"></label>
-  <label>Position <select class="ctrl-position"><option>higher</option><option>high</option><option selected></option><option>lower</option></select></label>
-  <label>Width <input type="text" class="ctrl-width" value=30></label>
+<label>Position 
+            <select class="ctrl-position">
+            <option></option>
+            <option>higher</option>
+            <option>high</option>
+            <option>lower</option>
+            </select>
+        </label>
+    <label>Width <input type="text" class="ctrl-width" value=30></label>
   <label>Height <input type="text" class="ctrl-height" value=10></label>
   <label>Round? <input type="checkbox" class="ctrl-round"></label>
   <label>Screen <input type="checkbox" id="screen1-check"><input type="color" class="ctrl-screen1" value="#111111"></label>
@@ -180,8 +198,22 @@
         <div class="control" data-type="multi">
   <h4>Multi Select</h4>
   <label>Label <input type="text" class="ctrl-label"></label>
-  <label>Alignment <select class="ctrl-position"><option>left</option><option>right</option><option>lower</option><option selected></option><option>higher</option><option>highest</option><option>align-top</option></select></label>
-  <label>Values <input type="text" class="ctrl-values" value="A,B,C"></label>
+  <label>Show Label <input type="checkbox" class="ctrl-showlabel"></label>
+  <label>Position 
+            <select class="ctrl-position">
+            <option></option>
+            <option>highest</option>
+            <option>higher</option>
+            <option>lower</option>
+            <option>right</option>
+            <option>left</option>
+            <option>align-top</option>
+            <option value="margin-left">Margin Left</option>
+            <option value="margin-right">Margin Right</option>
+            </select>
+        </label>
+        <input type="number" class="ctrl-position-value" placeholder="px" min="0" style="display:none; width:50px;">  <label>Color OFF <input type="color" class="ctrl-color0" value="#000000"></label>
+    <label>Values <input type="text" class="ctrl-values" value="A,B,C"></label>
   <label>Selected <input type="text" class="ctrl-num ctrl-value" value="A"></label>
   <br>
   <div class="ctrl-actions">
@@ -200,20 +232,23 @@
 
         // Show numeric input only for margin-left / margin-right
         $("#controls").on("change", ".ctrl-position", function () {
-        const val = $(this).val();
-        const $input = $(this).siblings(".ctrl-position-value");
-        if (val === "margin-left" || val === "margin-right") {
-            $input.show();
-        } else {
-            $input.hide().val("");
-        }
+            const val = $(this).val();
+            const $numInput = $(this).closest("label").next(".ctrl-position-value");
+            if (val === "margin-left" || val === "margin-right") {
+                $numInput.show();
+            } else {
+                $numInput.hide().val("");
+            }
+            buildJSON();
         });
+
 
 
         let isSyncing = false;
 
         // Builder logic
         function buildJSON() {
+
     if (isSyncing) return; // Skip rebuild during JSON sync
 
     const pedal = {
@@ -233,22 +268,10 @@
         controls: []
     };
 
-    // small helper for position handling
-    function getPosition($control) {
-        const posVal = $control.find(".ctrl-position").val();
-        const $posInput = $control.find(".ctrl-position-value");
-        if (posVal === "margin-left" || posVal === "margin-right") {
-            const px = parseInt($posInput.val(), 10) || 0;
-            return `${posVal}:${px}px`;
-        } else if (posVal && posVal.trim() !== "") {
-            return posVal;
-        }
-        return undefined;
-    }
-
     const logoVal = $("#pedal-logo").val();
     const el = document.createElement("div");
     el.style.cssText = logoVal;
+
     if (el.getAttribute("style")) {
         console.log("Valid CSS detected");
     } else {
@@ -259,12 +282,26 @@
     if ($("#pedal-inside-border-check").is(":checked")) {
         pedal["inside-border"] = $("#pedal-inside-border").val();
     } else {
-        delete pedal["inside-border"];
+        delete pedal["inside-border"]; // Ensure it's not left behind
     }
 
+    // --- helper for position ---
+    function getPosition($control) {
+        const posVal = $control.find(".ctrl-position").val();
+        const $posInput = $control.find(".ctrl-position-value");
+
+        if (posVal === "margin-left" || posVal === "margin-right") {
+            const px = parseInt($posInput.val(), 10) || 0;
+            return `${posVal}:${px}px`;
+        } else if (posVal && posVal.trim() !== "") {
+            return posVal;
+        }
+        return undefined;
+    }
+
+    // --- loop over rows/controls ---
     $("#controls .row").each(function () {
         const rowObj = { row: [] };
-
         $(this).find(".controls-row .control").each(function () {
             const type = $(this).data("type");
             const ctrl = {
@@ -290,6 +327,7 @@
                     $(this).find(".ctrl-color1").val()
                 ];
                 ctrl.value = parseInt($(this).find(".ctrl-value").val());
+                ctrl.showlabel = $(this).find(".ctrl-showlabel").is(":checked") ? "yes" : "no";
                 const pos = getPosition($(this));
                 if (pos) ctrl.position = pos;
 
@@ -312,13 +350,13 @@
             } else if (type === "multi") {
                 ctrl.values = $(this).find(".ctrl-values").val().split(",");
                 ctrl.value = $(this).find(".ctrl-value").val();
+                ctrl.showlabel = $(this).find(".ctrl-showlabel").is(":checked") ? "yes" : "no";
                 const pos = getPosition($(this));
                 if (pos) ctrl.position = pos;
             }
 
             rowObj.row.push(ctrl);
         });
-
         pedal.controls.push(rowObj);
     });
 
@@ -328,6 +366,7 @@
     const $pedalDiv = $("#pedal-box");
     $pedalDiv.empty().append(renderPedal(pedal));
 }
+
 
 
         $(function () {
