--- a/create-swal.html
+++ b/create-swal.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css" />
+    <link rel="stylesheet" href="style.css">
+    <script src="utils.js"></script>
+    <script src="create.js"></script>
 
 <title>Pedal Builder</title>
 
