--- a/create-swal.html
+++ b/create-swal.html
@@ -4,70 +4,29 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css" />
-    <link rel="stylesheet" href="style.css">
-
+<link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css" />
+<link rel="stylesheet" href="style.css">
 <title>Pedal Builder</title>
-
-
+</head>
+<body>
 
 <button id="openCreate">Open Pedal Builder</button>
+
 <script>
-document.getElementById('openCreate').addEventListener('click', async () => {
-    const response = await fetch('create.html');
-    let html = await response.text();
-
-    // Remove <html>, <head>, <body> tags
-    html = html.replace(/<!DOCTYPE html>/gi, '')
-               .replace(/<html[^>]*>/gi, '')
-               .replace(/<\/html>/gi, '')
-               .replace(/<head[^>]*>[\s\S]*<\/head>/gi, '')
-               .replace(/<body[^>]*>/gi, '')
-               .replace(/<\/body>/gi, '');
-
-    // Create a temporary container attached to document.body
-    const tempDiv = document.createElement('div');
-    tempDiv.style.display = 'none';
-    tempDiv.id = 'temp-builder-container';
-    tempDiv.innerHTML = html;
-    document.body.appendChild(tempDiv);
-
-    // Dynamically load utils.js first
-    await new Promise((resolve) => {
-        const utilsScript = document.createElement('script');
-        utilsScript.src = 'utils.js';
-        utilsScript.onload = resolve;
-        document.body.appendChild(utilsScript);
-    });
-
-    // Then dynamically load create.js
-    await new Promise((resolve) => {
-        const createScript = document.createElement('script');
-        createScript.src = 'create.js';
-        createScript.onload = resolve;
-        document.body.appendChild(createScript);
-    });
-
-    // Move the container HTML into Swal modal
+document.getElementById('openCreate').addEventListener('click', () => {
     Swal.fire({
         title: 'Pedal Builder',
-        html: `<div id="swal-builder-container" style="text-align:left; overflow:auto; max-height:80vh;"></div>`,
+        html: `
+            <iframe src="create.html" 
+                    style="width:100%; height:80vh; border:none;" 
+                    id="swal-builder-iframe"></iframe>
+        `,
         width: '90%',
         showCloseButton: true,
-        showConfirmButton: false,
-        didOpen: () => {
-            const swalContainer = document.getElementById('swal-builder-container');
-            // Move temp container content into the modal
-            const content = document.getElementById('temp-builder-container');
-            swalContainer.appendChild(content);
-            content.style.display = 'block';
-        }
+        showConfirmButton: false
     });
 });
 </script>
-
-
 
 </body>
 </html>
