bugfix <hr> row create

--- a/create.html
+++ b/create.html
@@ -440,7 +440,8 @@
                         <button class="bx--btn bx--btn--sm bx--btn--secondary row-down">↓ Row</button><br>
                         <button class="bx--btn bx--btn--sm bx--btn--danger row-remove">✕ Remove Row</button>
                         </div>
-                    </div><hr><br>
+                        <hr style="width:50%; position:relative; left:-33px;"><br>
+                    </div>
                     `);
                 $("#controls").append(row);
                 buildJSON();
