--- a/create.html
+++ b/create.html
@@ -50,7 +50,6 @@
     <div id="builder">
 
         <div id="editor">
-            <h2>Gear Quick Creation</h2><br><br>
             <div class="pedal-info">
                 <label>ID <input type="text" class="create-gear-input" id="pedal-id" placeholder="Insert unique gear ID..."></label>
                 <label>Name <input type="text" class="create-gear-input" id="pedal-name" placeholder="Insert gear name..."></label>
@@ -156,8 +155,8 @@
     </div>
 
     <!-- JSON (to be removed) -->
-    <h2>Generated JSON</h2><br><br>
-    <textarea id="json-output" style="width:100%;height:300px;font-family:monospace;"></textarea>
+    <!-- <h2>Generated JSON</h2><br><br> -->
+    <!-- <textarea id="json-output" style="width:100%;height:300px;font-family:monospace;"></textarea> -->
     <div id="json-error" style="color:red; font-weight:bold; margin-top:5px;"></div>
 
 
@@ -264,9 +263,14 @@
             <option value="margin-right">Margin Right</option>
             </select>
         </label>
-        <input type="number" class="ctrl-position-value" placeholder="px" min="0" style="display:none; width:50px;">  <label>Color OFF <input type="color" class="ctrl-color0" value="#000000"></label>
-  <label>Color ON <input type="color" class="ctrl-color1" value="#f70000"></label>
-  <label>Value <select class="ctrl-value"><option value="0">Off</option><option value="1">On</option></select></label>
+
+    <div class="led-colors-container">
+      <label>Color 0 <input type="color" class="ctrl-color" value="#000000"></label>
+      <label>Color 1 <input type="color" class="ctrl-color" value="#ff0000"></label>
+    </div>
+    <button class="bx--btn bx--btn--sm bx--btn--tertiary add-led-color">+ Color</button>
+    <select class="ctrl-value"></select>
+
   <br>
   <div class="ctrl-actions">
     <button class="bx--btn bx--btn--sm bx--btn--secondary move-up">↑</button>
@@ -275,6 +279,76 @@
   </div>
 </div>
 </script>
+
+
+
+<script>
+// Function to add a new LED control
+function addLedControl() {
+    const tpl = $("#led-template").html();
+    const $ctrl = $(tpl);
+
+    // Append to #controls
+    $("#controls").append($ctrl);
+
+    // Immediately populate the dropdown
+    updateLedValueSelect($ctrl);
+}
+
+// Add a new color to existing LED
+$("#controls").on("click", ".add-led-color", function() {
+    const $ctrl = $(this).closest(".control");
+
+    // Next color index
+    const nextIndex = $ctrl.find(".led-colors-container .ctrl-color").length;
+
+    // Add new color input
+    const $newColor = $(`
+        <label>Color ${nextIndex} 
+            <input type="color" class="ctrl-color" value="#ffffff">
+        </label>
+    `);
+    $ctrl.find(".led-colors-container").append($newColor);
+
+    // Update dropdown
+    updateLedValueSelect($ctrl);
+
+    // Immediately update JSON
+    buildJSON();
+});
+
+// Populate the value dropdown based on current colors
+function updateLedValueSelect($ctrl) {
+    const $select = $ctrl.find(".ctrl-value");
+    $select.empty();
+
+    $ctrl.find(".led-colors-container .ctrl-color").each((i) => {
+        $select.append(`<option value="${i}">${i}</option>`);
+    });
+
+    // Default selection to 0 if nothing selected
+    const prev = parseInt($select.data("prev"));
+    const maxVal = $ctrl.find(".ctrl-color").length - 1;
+    const newVal = (!isNaN(prev) && prev <= maxVal) ? prev : 0;
+    $select.val(newVal);
+    $select.data("prev", newVal);
+}
+
+// Sync value select on change
+$("#controls").on("change", ".ctrl-value", function() {
+    $(this).data("prev", $(this).val());
+});
+
+// Refresh dropdown when a color input changes
+$("#controls").on("input", ".ctrl-color", function() {
+    const $ctrl = $(this).closest(".control");
+    updateLedValueSelect($ctrl);
+});
+
+// Example: attach LED creation to button
+$("#add-led").on("click", addLedControl);
+</script>
+
 
     <script type="text/template" id="slider-template">
         <div class="control" data-type="slider">
@@ -450,10 +524,18 @@
             function addControl(buttonClass, templateId) {
                 $("#controls").on("click", buttonClass, function () {
                     const controlsRow = $(this).closest(".row").find(".controls-row");
-                    controlsRow.append($(templateId).html());
+                    const $ctrl = $(templateId).html();
+                    controlsRow.append($ctrl);
+
+                    // If this is an LED, immediately populate its dropdown
+                    if ($(templateId).attr("id") === "led-template") {
+                        updateLedValueSelect(controlsRow.find(".control[data-type=led]").last());
+                    }
+
                     buildJSON();
                 });
             }
+
             addControl(".add-knob", "#knob-template");
             addControl(".add-led", "#led-template");
             addControl(".add-slider", "#slider-template");
