--- a/create-swal.html
+++ b/create-swal.html
@@ -22,8 +22,10 @@ document.getElementById('openCreate').addEventListener('click', () => {
                     id="swal-builder-iframe"></iframe>
         `,
         width: '90%',
-        showCloseButton: true,
-        showConfirmButton: false
+        showCloseButton: false,
+        showConfirmButton: false,
+        background: '#2e2e2e',
+        color: '#ffffff'
     });
 });
 </script>
