--- a/create-swal.html
+++ b/create-swal.html
@@ -15,15 +15,27 @@
 <script>
 document.getElementById('openCreate').addEventListener('click', () => {
     Swal.fire({
-        title: 'Pedal Builder',
+        title: 'Gear Builder',
         html: `
             <iframe src="create.html" 
                     style="width:100%; height:80vh; border:none;" 
                     id="swal-builder-iframe"></iframe>
         `,
         width: '90%',
+        allowOutsideClick: false,
+        allowEscapeKey: false,
         showCloseButton: false,
-        showConfirmButton: false,
+        showConfirmButton: true,
+        showCancelButton: true,
+        showDenyButton: true,
+        confirmButtonText: 'Save',
+        denyButtonText: 'Delete',
+        cancelButtonText: 'Cancel',
+        customClass: {
+            confirmButton: 'bx--btn bx--btn--primary',
+            denyButton: 'bx--btn bx--btn--danger',
+            cancelButton: 'bx--btn bx--btn--secondary'
+        },
         background: '#2e2e2e',
         color: '#ffffff'
     });
