debug multi label

--- a/create.html
+++ b/create.html
@@ -401,7 +401,7 @@ $("#add-led").on("click", addLedControl);
     <script type="text/template" id="multi-template">
         <div class="control" data-type="multi">
   <h4>Multi Select</h4>
-  <label>Label <input type="text" class="ctrl-label"></label><input type="checkbox" class="ctrl-showlabel">
+  <label>Label <input type="text" class="ctrl-label"><input type="checkbox" class="ctrl-showlabel"></label>
   <label>Position 
             <select class="ctrl-position">
             <option></option>
