bugfix position led missing

--- a/create.html
+++ b/create.html
@@ -267,6 +267,7 @@
             <option value="margin-right">Margin Right</option>
             </select>
         </label>
+        <input type="number" class="ctrl-position-value" placeholder="px" min="0" style="display:none; width:50px;">
 
     <div class="led-colors-container">
       <label>Color 0 <input type="color" class="ctrl-color" value="#000000"></label>
