bugfix width pedal-box editing

--- a/create.html
+++ b/create.html
@@ -30,7 +30,7 @@
         right: 20px;
         top: 20px;
         bottom: 20px;
-        width: 55%;
+        /* width: 55%; */
         overflow: auto;
         padding: 15px;
         border-radius: 8px;
