bugfix missing size

--- a/create.html
+++ b/create.html
@@ -458,10 +458,10 @@ $("#add-led").on("click", addLedControl);
 </script>
 
     <script>
-        const widths = ["xsmall", "smaller", "small", "medium", "standard", "large", "+large", "larger", "xlarge",
+        const widths = ["xsmall", "smaller", "small", "medium", "standard", "large", "+large", "larger", "+larger", "++larger", "xlarge",
             "xlarger", "largest", "wide", "wider", "widest", "xwidest"];
         const heights = ["xsmall", "smaller", "small", "medium", "standard", "large", "+large", "larger", "xlarge",
-            "xlarger", "largest", "tall"];
+            "xlarger", "largest", "xlargest", "tall"];
 
 
 
