--- a/create.html
+++ b/create.html
@@ -77,9 +77,9 @@
                 </select>
                 </label>&ensp;&ensp;
                 
-                <label id="inside-color-label">Color<input type="color" id="pedal-inside-color" value="#0d0d0d"></label>
+                <label id="inside-color-label">Inside Color<input type="color" id="pedal-inside-color" value="#0d0d0d"></label>
                 <label id="inside-image-label" style="display:none">Image URL<input type="text" id="pedal-inside-image" placeholder="https://example.com/image.png"></label>
-                <label id="pedal-inside-full-check-label"><input type="checkbox" id="pedal-inside-full-check"> Full (only for colors)</label>
+                <label id="pedal-inside-full-check-label"><input type="checkbox" id="pedal-inside-full-check"> Full</label>
 
                 
                 <label id="inside-border-label" style="display:none;"> Inside Border <input type="checkbox" id="pedal-inside-border-check"><input type="color" id="pedal-inside-border" value="#000000"></label>
@@ -254,13 +254,13 @@
         </span>
         <label>Span
             <select class="ctrl-span">
-                <option value="all">12->12</option>
-                <option value="three-quarters" selected>7->17</option>
-                <option value="half">6->12</option>
-                <option value="half-shift">14<-20</option>
-                <option value="half-shift-inverted">17->23</option>
-                <option value="quarter">13->10</option>
-                <option value="tenToTwo">10->14</option>
+                <option value="all">12am->12pm</option>
+                <option value="three-quarters" selected>7am->5pm</option>
+                <option value="half">6am->12pm</option>
+                <option value="half-shift">2am<-8pm</option>
+                <option value="half-shift-inverted">5pm->11pm</option>
+                <option value="quarter">1am->10am</option>
+                <option value="tenToTwo">10am->2pm</option>
             </select>
         </label>
 
