work on authoring start

--- a/create.html
+++ b/create.html
@@ -56,6 +56,11 @@
                 <label>Logo style <input type="text" class="create-gear-input" id="pedal-logo" placeholder="Set valid CSS..."></label>
             </div>
             <br>
+            <div class="form-group">
+                <label for="pedal-author">Author</label>
+                <input type="text" id="pedal-author" class="form-control" readonly>
+            </div>
+            <br>
             <label>Type <select id="pedal-type">
                     <option value="pedal">Pedal</option>
                     <option value="pedal-inverted">Pedal Inverted</option>
