--- a/create.html
+++ b/create.html
@@ -54,7 +54,8 @@
 
 <div class="form-group">
   <label for="pedal-author">Author</label>
-  <input type="text" id="pedal-author" readonly class="form-control" />
+  <input type="text" id="pedal-author" readonly disabled class="form-control" />
+  <input type="hidden" id="pedal-author-id" />
 </div>
 
 <div class="form-group">
