--- a/create.html
+++ b/create.html
@@ -52,20 +52,18 @@
         <div id="editor">
             <div class="pedal-info">
 
-<label for="pedal-author">Author</label>
-<input type="text" id="pedal-author" readonly />
+                <label for="pedal-author">Author:</label>
+                <span id="pedal-author"></span>
 
-<input type="hidden" id="pedal-author-id" />
+                <input type="hidden" id="pedal-author-id" />
 
-<label for="pedal-published">Published</label>
-<select id="pedal-published">
-  <option value="draft">Draft</option>
-  <option value="private">Private</option>
-  <option value="reviewing">Reviewing</option>
-  <option value="public">Public</option>
-</select>
-
-
+                <label for="pedal-published">Status</label>
+                <select id="pedal-published">
+                    <option value="draft">Draft</option>
+                    <option value="private">Private</option>
+                    <option value="reviewing">Reviewing</option>
+                    <option value="public">Public</option>
+                </select>
 
                 <label>ID <input type="text" class="create-gear-input" id="pedal-id" placeholder="Insert unique gear ID..."></label>
                 <label>Name <input type="text" class="create-gear-input" id="pedal-name" placeholder="Insert gear name..."></label>
