--- a/create.html
+++ b/create.html
@@ -52,9 +52,7 @@
         <div id="editor">
             <div class="pedal-info">
 
-                <label for="pedal-author">Author:</label>
-                <span id="pedal-author"></span>
-
+                <input type="hidden" id="pedal-author" />
                 <input type="hidden" id="pedal-author-id" />
 
                 <label for="pedal-published">Status</label>
